# xarray_cdl

./: LICENSE.md  README.md  pyproject.toml
src/xarray_cdl/: __init__.py  dumps.py  generate.py  parser.py
tests/: test_cdl.py
